Auto redirect when there is user_id session.

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -116,7 +116,7 @@
                                                 <div class="card shadow-none m-0 border-start">
                                                     <div class="card-body text-center">
                                                         <i class="dripicons-checklist text-muted" style="font-size: 24px;"></i>
-                                                        <h3>$<span id="total-earned">0</span> <i class="mdi mdi-arrow-down text-danger"></i></h3>
+                                                        <h3>$<span id="total-earned">0</span> <i class="mdi"></i></h3>
                                                         <p class="text-muted font-15 mb-0">Current Portfolio</p>
                                                     </div>
                                                 </div>
@@ -136,7 +136,7 @@
                                                 <div class="card shadow-none m-0 border-start">
                                                     <div class="card-body text-center">
                                                         <i class="dripicons-graph-line text-muted" style="font-size: 24px;"></i>
-                                                        <h3><span id="portfolio-beginning">0</span>% <i class="mdi mdi-arrow-down text-danger"></i></h3>
+                                                        <h3><span id="portfolio-beginning">0</span>% <i class="mdi"></i></h3>
                                                         <p class="text-muted font-15 mb-0">Portfolio From Biggining:</p>
                                                     </div>
                                                 </div>
@@ -313,7 +313,6 @@
                             console.log(data); // Log the data for debugging
                             updateVisualization(data);
                             loadHeatmap(userId);
-        
                             // Update arrows based on fetched data
                             updateArrow('portfolio-beginning', '#portfolio-beginning + i');
                             var totalInvested = parseFloat(document.getElementById('total-invested').innerText);
