--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -130,6 +130,7 @@
                                                     <div class="card-body text-center">
                                                         <i class="dripicons-user-group text-muted" style="font-size: 24px;"></i>
                                                         <h3><span id="portfolio-today">0</span>%<i class="mdi"></i></h3>
+                                                        <p class="text-muted font-15 mb-0">₪<span id="portfolio-today-ILS"></span></p>
                                                         <p class="text-muted font-15 mb-0">Portfolio Today(%)</p>
                                                     </div>
                                                 </div>
