getting archived stock data as api. ability to determine how long are the graphs.

--- a/templates/index.html
+++ b/templates/index.html
@@ -163,10 +163,10 @@
                                                 </div>
                                                 <div class="col-lg-6">
                                                 <div class="form-group">
-                                                    <label for="period">Period for average price (days):</label>
+                                                    <label for="period">Period for stock Analysis:</label>
                                                     <div id="mb-3">
                                                         <div id="input-box">
-                                                    <input class="form-control" id="simpleinput" type="number" name="period" id="period" value="152" required>
+                                                    <input class="form-control" id="simpleinput" type="number" name="period" id="period" value="50" required>
                                                 </div>
                                             </div>
                                                 </div>
@@ -174,7 +174,7 @@
                                                     <label for="watch_list_period">Period for watch list (days):</label>
                                                     <div id="mb-3">
                                                         <div id="input-box">
-                                                    <input class="form-control" id="simpleinput" type="number" name="watch_list_period" id="watch_list_period" value="150" required>
+                                                    <input class="form-control" id="simpleinput" type="number" name="watch_list_trend_days" id="watch_list_trend_days" value="150" required>
                                                 </div>
                                                 </div>
                                                 </div>
