--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -61,7 +61,7 @@
                            .catch(error => console.error('Error fetching the menu:', error));
                    });
         </script>
-        <style> html, body { height: 100%; margin: 0; padding: 0; overflow: auto; } #row, #col-12, .card, .card-body, .stockmap-container { height: 100%;} #stock-map { height: calc(40vh - 20px); } .map-container { display: flex; flex-direction: column; height: 100%; } .legend { display: flex; justify-content: center; margin-top: 10px; } 
+        <style>#row, #col-12, .stockmap-container { height: 100%;} #stock-map { height: calc(40vh - 20px); } .map-container { display: flex; flex-direction: column; height: 100%; } .legend { display: flex; justify-content: center; margin-top: 10px; } 
         .legend-item {
             width: 65px;
             height: 20px;
@@ -74,6 +74,8 @@
 
     <body class="loading" data-layout-color="light" data-leftbar-theme="dark" data-layout-mode="fluid" data-rightbar-onstart="true">
         <div class="wrapper">
+            <div id="loading"> <img src="{{ url_for('static', filename='images/tomer.gif') }}" alt="Loading..."> </div>
+
         <!-- Begin page -->
             <!-- ========== Left Sidebar Start ========== -->
             <div id="leftside-menu" class="leftside-menu"></div>
@@ -178,9 +180,79 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-xl-3 col-lg-4">
+                                <div class="card tilebox-one">
+                                    <div class="card-body">
+                                        <i class="uil uil-users-alt float-end"></i>
+                                        <h6 class="text-uppercase mt-0">Active Users</h6>
+                                        <h2 class="my-2" id="active-users-count">685</h2>
+                                        <p class="mb-0 text-muted">
+                                            <span class="text-success me-2"><span class="mdi mdi-arrow-up-bold"></span> 5.27%</span>
+                                            <span class="text-nowrap">Since last month</span>  
+                                        </p>
+                                    </div> <!-- end card-body-->
+                                </div>
+                                <!--end card-->
+
+                                <div class="card tilebox-one">
+                                    <div class="card-body">
+                                        <i class="uil uil-window-restore float-end"></i>
+                                        <h6 class="text-uppercase mt-0">Views per minute</h6>
+                                        <h2 class="my-2" id="active-views-count">399</h2>
+                                        <p class="mb-0 text-muted">
+                                            <span class="text-danger me-2"><span class="mdi mdi-arrow-down-bold"></span> 1.08%</span>
+                                            <span class="text-nowrap">Since previous week</span>
+                                        </p>
+                                    </div> <!-- end card-body-->
+                                </div>
+                                <!--end card-->
+
+                                <div class="card cta-box overflow-hidden">
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-center">
+                                            <div>
+                                                <h3 class="m-0 fw-normal cta-box-title">Enhance your <b>Campaign</b> for better outreach <i class="mdi mdi-arrow-right"></i></h3>
+                                            </div>
+                                            <img class="ms-3" src="assets/images/email-campaign.svg" width="92" alt="Generic placeholder image">
+                                        </div>
+                                    </div>
+                                    <!-- end card-body -->
+                                </div>
+                            </div> <!-- end col -->
+
+                            <div class="col-xl-9 col-lg-8">
+                                <div class="card card-h-100">
+                                    <div class="card-body">
+                                        <ul class="nav float-end d-none d-lg-flex">
+                                            <li class="nav-item">
+                                                <a class="nav-link text-muted" href="#">Today</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-muted" href="#">7d</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link active" href="#">15d</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-muted" href="#">1m</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-muted" href="#">1y</a>
+                                            </li>
+                                        </ul>
+                                        <h4 class="header-title mb-3">Portfolio Performance</h4>
+                                        <div dir="ltr">
+                                            <div id="chart" class="apex-charts mt-3" data-colors="#0acf97"></div>
+                                        </div>
+                                    </div> <!-- end card-body-->
+                                </div> <!-- end card-->
+                            </div>
                         </div>
-                        </div>
-                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
                 <!-- content -->
             <!-- ============================================================== -->
             <!-- End Page content -->
@@ -291,6 +363,7 @@
         <!-- third party js ends -->
 
         <!-- demo app -->
+        <script src="assets/js/vendor/apexcharts.min.js"></script>
         <script src="{{ url_for('static', filename='/js/pages/demo.dashboard.js')}}"></script>
         <!-- end demo js-->
         <script src="https://d3js.org/d3.v6.min.js"></script>
@@ -302,21 +375,200 @@
         <script>
             const tickerData = {{ ticker_data | tojson }};
     
-            fetchStockPerformance('since_bought')
+            
             function fetchStockPerformance(period) {
                 const userId = {{ user_id|tojson }};
-                fetch(`/stock_performance/${userId}?period=${period}`)
+                return fetch(`/stock_performance/${userId}?period=${period}`)
                     .then(response => response.json())
                     .then(data => {
                         updateVisualization(data);
                         loadHeatmap(userId);
                         // Update arrows based on fetched data
-                        
                     })
                     .catch(error => {
                         console.error('Error fetching stock performance data:', error);
                     });
             }
+
+function delay(ms) {
+    return new Promise(resolve => setTimeout(resolve, ms));
+}
+
+async function fetchWithRetry(url, retries = 3, delayMs = 1000) {
+    for (let attempt = 1; attempt <= retries; attempt++) {
+        try {
+            const response = await fetch(url);
+            if (!response.ok) {
+                throw new Error('Network response was not ok ' + response.statusText);
+            }
+            const text = await response.text();
+            try {
+                return JSON.parse(text);
+            } catch (error) {
+                console.error('Error parsing JSON:', text);
+                throw error;
+            }
+        } catch (error) {
+            console.error(`Fetch attempt ${attempt} failed:`, error);
+            if (attempt < retries) {
+                await delay(delayMs);
+            } else {
+                throw error;
+            }
+        }
+    }
+}
+
+            function getPreviousPrice(seriesData, ticker, date) {
+    const stockData = seriesData[ticker];
+    const dateIndex = stockData.findIndex(d => d.date === date);
+
+    // If the date is not found or it's the first date, we need to search backwards
+    if (dateIndex === -1 || dateIndex === 0) {
+        for (let i = stockData.length - 1; i >= 0; i--) {
+            if (new Date(stockData[i].date) < new Date(date)) {
+                return stockData[i].price;
+            }
+        }
+    } else {
+        // If the date is found and it's not the first date, return the previous day's price
+        return stockData[dateIndex - 1].price;
+    }
+
+    // Return 0 if no previous price is found, can be adjusted based on requirements
+    return 0;
+}
+        async function init() {
+            const period = "150"
+            const userId = {{ user_id|tojson }};
+            const loadingElement = document.getElementById('loading');
+            try {
+                loadingElement.style.display = 'flex';
+                const [stocksData, heatmapData] = await Promise.all([
+                    await fetchWithRetry(`/fetch_stocks/${period}`),
+                    await fetchWithRetry(`/heatmap_data/${userId}`),
+                ]);
+                await fetchStockPerformance('since_bought');
+                const dates = [];
+                const seriesData = {};
+
+                // Extract dates and prices
+                stocksData.results.portfolio.forEach(stock => {
+                    const ticker = stock.ticker;
+                    seriesData[ticker] = stock.dates.map((date, index) => ({
+                        date,
+                        price: stock.last_50_closes[index]
+                    }));
+
+                    // Collect all unique dates
+                    stock.dates.forEach(date => {
+                        if (!dates.includes(date)) {
+                            dates.push(date);
+                        }
+                    });
+                });
+
+                dates.sort((a, b) => new Date(a) - new Date(b));
+
+                // Calculate total portfolio value over time
+                const portfolioValues = dates.map(date => {
+                    let totalValue = 0;
+                    Object.keys(seriesData).forEach(ticker => {
+                        let stockData = seriesData[ticker].find(d => d.date === date);
+                        if (!stockData) {
+                            stockData = { price: getPreviousPrice(seriesData, ticker, date) };
+                        }
+                        const stockInfo = heatmapData[ticker] ? heatmapData[ticker][0] : null;
+                        if (stockInfo) {
+                            totalValue += stockInfo.number_of_stocks * stockData.price;
+                        }
+                    });
+                    return { date, value: totalValue.toFixed(2) };
+                });
+
+// Define the gradient colors
+const colors = ["#0acf97", "#0acf97"];
+
+// Create series for the portfolio performance
+const series = [{
+    name: 'Portfolio Value',
+    data: portfolioValues.map(({ date, value }) => ({ x: date, y: value }))
+}];
+
+const options = {
+    chart: {
+        type: 'area',
+        height: 350,
+        zoom: {
+            enabled: false
+        },
+        parentHeightOffset: 0,
+        toolbar: {
+            show: false
+        }
+    },
+    series: series,
+    xaxis: {
+        type: 'datetime'
+    },
+    yaxis: {
+        title: {
+            text: 'Portfolio Value'
+        },
+        labels: {
+            formatter: function(value) {
+                return value + 'k';
+            },
+            offsetX: -15
+        }
+    },
+    grid: {
+        padding: {
+            left: 0,
+            right: 0
+        }
+    },
+    colors: colors,
+    stroke: {
+        curve: 'smooth',
+        width: 4
+    },
+    fill: {
+        type: 'gradient',
+        gradient: {
+            shade: 'light',
+            type: 'vertical',
+            shadeIntensity: 1,
+            gradientToColors: ["#0acf97"], 
+            inverseColors: false,
+            opacityFrom: 0.7,
+            opacityTo: 0.1,
+            stops: [0, 100]
+        }
+    },
+    tooltip: {
+        y: {
+            formatter: function(value) {
+                return value;
+            }
+        }
+    },
+    dataLabels: {
+        enabled: false
+    }
+};
+
+const chart = new ApexCharts(document.querySelector("#chart"), options);
+chart.render();
+
+
+
+            } catch (error) {
+                console.error('There has been a problem with your fetch operation:', error);
+            } 
+        }
+
+        document.addEventListener('DOMContentLoaded', init);
         </script>
         <script src="{{ url_for('static', filename='heatmap.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
